testsuite/tests/parser/unicode/utf8_011.stderr
utf8_011.hs:2:8: error: [GHC-21231]
    lexical error (UTF-8 decoding error)

