testsuite/tests/parser/unicode/utf8_011.hs
-- 0xbf is an invalid character
bad = '¿'
